feat(auth): Add JWT authentication system
This commit adds a complete JWT authentication system to the application:

Backend (Symfony):
- Add User entity with proper validation and security interfaces
- Add UserRepository with custom query methods
- Add ApiAuthController with login, register, profile, and refresh endpoints
- Add JWT configuration with LexikJWTAuthenticationBundle
- Update security.yaml with JWT firewall and API protection rules
- Add CSRF protection for registration endpoint
- Add password validation (min 8 chars, complexity requirements)

Frontend (React):
- Add jwt.ts module for secure JWT token management
- Add useAuth React hook with auto-refresh functionality
- Add LoginForm component with validation and error handling
- Add proper token storage, parsing, and validation utilities

Configuration:
- Add JWT environment variables to .env
- Update .gitignore to protect private keys
- Add public.pem.example as reference for key format
- Generate RSA 4096-bit key pair for JWT signing

Security improvements:
- Input validation on all authentication endpoints
- CSRF token protection for registration
- Secure password hashing with Symfony's PasswordHasher
- Stateless API authentication with JWT
- Automatic token refresh before expiration

Note: The private key (config/jwt/private.pem) is not committed
due to .gitignore rules. Each developer must generate their own keys.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+# Clés JWT - NE JAMAIS COMMITTER CES FICHIERS !
+config/jwt/private.pem
+config/jwt/*.pem
+!config/jwt/public.pem.example
+###< lexik/jwt-authentication-bundle ###
