--- a/.env
+++ b/.env
@@ -50,3 +50,18 @@ MAILER_DSN=null://null
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+# Clés JWT pour l'authentification par tokens
+# IMPORTANT: Ces fichiers doivent être générés avec les commandes :
+#   openssl genrsa -out config/jwt/private.pem 4096
+#   openssl rsa -in config/jwt/private.pem -pubout -out config/jwt/public.pem
+#
+# Pour protéger la clé privée avec une phrase de passe :
+#   openssl rsa -in config/jwt/private.pem -out config/jwt/private.pem.new -passout pass:VOTRE_PHRASE
+#   mv config/jwt/private.pem.new config/jwt/private.pem
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+# Changez cette phrase de passe et gardez-la secrète !
+JWT_PHRASE=ChangezCettePhraseDePasse123!
+###< lexik/jwt-authentication-bundle ###
